--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,15 @@
     <string name="app_name">VAG</string>
     <string name="user">Introduce un username</string>
     <string name="boton">Aceptar</string>
+    <string name="menu_Login">Aceptar</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="salas">Salas</string>
+    <string name="unirse">Unirse</string>
+    <string name="crear">Crear</string>
+
+
+    <string name="Error">No tendrias que ver esto </string>
+
+
 </resources>
